<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eng_vie"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_eng_vie" />
        <item
            android:id="@+id/nav_vie_eng"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_vie_eng" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_your_word"
            android:title="@string/menu_your_word" />
    </group>
</menu>