<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.your_word.YourWordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ywContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtCurrentWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/random_word"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/swEngVie"
                app:layout_constraintStart_toStartOf="@+id/swEngVie"
                app:layout_constraintTop_toBottomOf="@+id/swEngVie" />

            <ImageView
                android:id="@+id/btnMicro2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/mic"
                app:layout_constraintEnd_toEndOf="@+id/txtCurrentWord"
                app:layout_constraintStart_toStartOf="@+id/txtCurrentWord"
                app:layout_constraintTop_toBottomOf="@+id/txtCurrentWord"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/txtPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/_50_points"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btnMicro2"
                app:layout_constraintStart_toStartOf="@+id/btnMicro2"
                app:layout_constraintTop_toBottomOf="@+id/btnMicro2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/your_words"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/txtPoint"
                app:layout_constraintStart_toStartOf="@+id/txtPoint"
                app:layout_constraintTop_toBottomOf="@+id/txtPoint" />

            <Switch
                android:id="@+id/swEngVie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/english"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ywContainer"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewYourWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="320dp" />
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>